--- a/src/components/UI/Button.module.css
+++ b/src/components/UI/Button.module.css
@@ -8,7 +8,6 @@
   color: white;
   display: flex;
   flex-direction: row;
-
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -26,4 +25,13 @@
 
 .buttonDiv:hover{
   cursor: pointer;
+}
+
+@media screen and (max-width:600px){
+  .buttonDiv img{
+    display: none;
+  }
+  .buttonDiv{
+    padding: 8px 22px;
+  }
 }
