--- a/src/components/UI/CoverBar.module.css
+++ b/src/components/UI/CoverBar.module.css
@@ -7,3 +7,12 @@
   background-origin: border-box;
   background-clip: content-box,border-box;
 }
+
+@media screen and (max-width:600px) {
+  .coverbar{
+    width: 80%;
+    border-radius: 15px;
+    border: 5px solid transparent;
+    height: 210px;
+  }
+}
