--- a/src/components/index/Coming/ComingSoon.module.css
+++ b/src/components/index/Coming/ComingSoon.module.css
@@ -13,7 +13,6 @@
   right: 0px;
   width: 350px;
   margin-right: 70px;
-  margin-top: 80px;
   filter: drop-shadow(0px 0px 60px #8700b8);
 }
 
@@ -67,4 +66,43 @@
   color: rgb(83, 83, 83);
 }
 
+@media screen and (max-width:600px){
+  .comingSoon{
+    margin-left: 3%;
+    background-position: 0px -140px;
+    margin-bottom: 60px;
+  }
+  .comingSoon img{
+    position: relative;
+    width:290px;
+    margin-left: 6%;
+  }
+  .textContent h1{
+    font-size: 35px;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 55px;
+  }
+  .expText{
+    margin-top: 76px;
+    padding: 0px 5px;
+    width: 95%;
+  }
+  .subForm h2{
+    font-size: 23px;
+    margin-bottom: 40px;
+  }
 
+  .input{
+    flex-direction: column;
+    width: 95%;
+    align-items: end;
+    margin-left: 5%;
+  }
+
+  .input input{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+}
